force-app/main/default/objects/FOB__c/FOB__c.object-meta.xml
<CustomObject>
    <label>FOB</label>
    <nameField>
        <displayFormat>FOB-{000000}</displayFormat>
        <label>FOB Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FOBs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>