force-app/main/default/objects/FOB__c/fields/Billing_Document__c.field-meta.xml
<CustomField>
    <fullName>Billing_Document__c</fullName>
    <label>Billing Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>