force-app/main/default/objects/FOB__c/fields/Billing_item__c.field-meta.xml
<CustomField>
    <fullName>Billing_item__c</fullName>
    <label>Billing item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>