force-app/main/default/objects/FOB__c/fields/BL_NO__c.field-meta.xml
<CustomField>
    <fullName>BL_NO__c</fullName>
    <label>BL NO.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>