force-app/main/default/objects/FOB__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FOBs</relationshipLabel>
    <relationshipName>FOBs</relationshipName>
    <type>Lookup</type>
</CustomField>