force-app/main/default/objects/FOB__c/fields/Destination_DC__c.field-meta.xml
<CustomField>
    <fullName>Destination_DC__c</fullName>
    <label>Destination DC #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>