force-app/main/default/objects/FOB__c/fields/fff__c.field-meta.xml
<CustomField>
    <fullName>fff__c</fullName>
    <label>fff</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>