force-app/main/default/objects/FOB__c/fields/FOB_GSS__c.field-meta.xml
<CustomField>
    <fullName>FOB_GSS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FOB GSS</label>
    <referenceTo>FOB_GSS__c</referenceTo>
    <relationshipLabel>FOBs</relationshipLabel>
    <relationshipName>FOBs</relationshipName>
    <type>Lookup</type>
</CustomField>