force-app/main/default/objects/FOB__c/fields/FOB_Port__c.field-meta.xml
<CustomField>
    <fullName>FOB_Port__c</fullName>
    <label>FOB Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>