force-app/main/default/objects/FOB__c/fields/GTM_Shipping_Order__c.field-meta.xml
<CustomField>
    <fullName>GTM_Shipping_Order__c</fullName>
    <label>GTM Shipping Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>