force-app/main/default/objects/FOB__c/fields/Invoice_Price_By_Container__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Price_By_Container__c</fullName>
    <label>Invoice Price By Container</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>