force-app/main/default/objects/FOB__c/fields/Invoice_Price_By_Unit__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Price_By_Unit__c</fullName>
    <label>Invoice Price By Unit</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>