force-app/main/default/objects/FOB__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>FOBs</relationshipLabel>
    <relationshipName>FOBs</relationshipName>
    <type>Lookup</type>
</CustomField>