force-app/main/default/objects/FOB__c/fields/Order_status__c.field-meta.xml
<CustomField>
    <fullName>Order_status__c</fullName>
    <label>Order status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>