force-app/main/default/objects/FOB__c/fields/PO_Qty__c.field-meta.xml
<CustomField>
    <fullName>PO_Qty__c</fullName>
    <label>PO Qty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>