force-app/main/default/objects/FOB__c/fields/Production_Base__c.field-meta.xml
<CustomField>
    <fullName>Production_Base__c</fullName>
    <label>Production Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>