force-app/main/default/objects/FOB__c/fields/Sales_Document_Item__c.field-meta.xml
<CustomField>
    <fullName>Sales_Document_Item__c</fullName>
    <label>Sales Document Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>