force-app/main/default/objects/FOB__c/fields/SAP_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>SAP_Invoice_Date__c</fullName>
    <label>SAP Invoice Date</label>
    <type>Date</type>
</CustomField>