force-app/main/default/objects/FOB__c/fields/Ships_Name__c.field-meta.xml
<CustomField>
    <fullName>Ships_Name__c</fullName>
    <label>Ships Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>