force-app/main/default/objects/FOB__c/fields/USA_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>USA_Item_Number__c</fullName>
    <label>U.S.A Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>