force-app/main/default/objects/FOB__c/fields/wwwww__c.field-meta.xml
<CustomField>
    <fullName>wwwww__c</fullName>
    <label>wwwww</label>
    <type>Address</type>
</CustomField>