force-app/main/default/objects/FOB__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>wwwww__CountryCode__s</columns>
    <columns>wwwww__StateCode__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>